vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_sql_query_data_expr.vv
fn main() {
	({
		name == $embed_file(@FILE).path
	})
}
